[package]
name = "ScreenShotTool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
config = "0.13.3"
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid", "numeric", "64-column-tables","postgres_backend","serde_json"] }
serde = { version = "1.0.171" , features = ["derive"] }
thiserror = "1.0.43"
utoipa = { version = "3", features = ["actix_extras"] }
uuid = "1.4.0"
